Fix gap lagi

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,9 +12,12 @@
   }
 }
 
-html, body {
-  overflow-x: hidden;
+html,
+body,
+#root {
   width: 100%;
+  max-width: 100%; 
+  overflow-x: hidden;
 }
 
 body {
